Commit final con arreglos

--- a/index.html
+++ b/index.html
@@ -5,55 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="Img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <p id="travelia">Travelia</p>
+    </header>
     <article>
-        <div>
-            <div>
-                <img src="Img/tours.png" alt="tours">
+        <div id="div1">
+            <div id="card">
+                <img id="imgcard" src="Img/tours.png" alt="tours">
                 <h1>Tours</h1>
                 <p>Our extensive knowledge allows us to curate the perfect blend of
                     activities and services, transforming your journey into a tapestry of 
                     memorable adventures.
                 </p>
             </div>
-            <div>
-                <img src="Img/hikking.png" alt="hikking">
+            <div id="card">
+                <img id="imgcard" src="Img/hikking.png" alt="hikking">
                 <h1>Hikking</h1>
                 <p>Each journey may begin with a single step, but some require a few more 
                     steps than others.
                 </p>
             </div>
-            <div>
-                <img src="Img/travel.png" alt="travel">
+            <div id="card">
+                <img id="imgcard" src="Img/travel.png" alt="travel">
                 <h1>Travel</h1>
                 <p>We make booking and managing flights eassy for business travel, but it 
                     also gives your team access to exclusive corporate rates and discounts. 
                 </p>
             </div>
-            <div>
-                <img src="Img/support.png" alt="support">
+            <div id="card">
+                <img id="imgcard" src="Img/support.png" alt="support">
                 <h1>Support</h1>
                 <p>You can choose from a wide range of support options to contact us.</p>
             </div>
         </div>
-        <div>
-            <img src="Img/sassolungo-mountain-italy.jpg" alt="mountain">
+        <div id="div2">
+            <img id="photo" src="Img/sassolungo-mountain-italy.jpg" alt="mountain">
         </div>
-        <div>
+        <div id="div3">
             <form action="" method="get">
-                <div>
+                <h1>CONTACT US</h1>
+                <div id="miembroform">
                     <input type="text" name="name" id="name" placeholder="Enter your name">
                 </div>
-                <div>
+                <div id="miembroform">
                     <input type="email" name="email" id="email" placeholder="Enter your email">
                 </div>
-                <div>
+                <div id="miembroform">
                     <label for="age">Age</label>
                     <input type="number" name="age" id="age">
                 </div>
-                <div>
+                <div id="miembroform">
                     <legend><strong>Gender</strong></legend>
                     <input type="checkbox" name="Male" id="male">
                     <label for="male">Male</label>
@@ -62,21 +66,22 @@
                     <input type="checkbox" name="Non Binary" id="nobinary">
                     <label for="nobinary">Non binary</label>
                 </div>
-                <div>
+                <div id="miembroform">
                     <legend>Comments</legend>
                     <textarea name="comments" id="comments" cols="30" rows="5"></textarea>
                 </div>
-                <div>
-                    <input type="submit" value="Submit">
+                <div id="miembroform">
+                    <input id="boton" type="submit" value="Submit">
                 </div>
             </form>
         </div>
     </article>
     <footer>
-        <a href="https://www.instagram.com/" target="_blank"><img src="Img/instagram.png" alt="instagram"></a>
-        <a href="https://web.telegram.org/a/" target="_blank"><img src="Img/telegram.png" alt="telegram"></a>
-        <a href="https://www.tiktok.com/es/" target="_blank"><img src="Img/tiktok.png" alt="tiktok"></a>
-        <a href="https://www.youtube.com/" target="_blank"><img src="Img/youtube.png" alt="youtube"></a>
+        <a href="https://www.instagram.com/" target="_blank"><img id="imglogo" src="Img/instagram.png" alt="instagram"></a>
+        <a href="https://web.telegram.org/a/" target="_blank"><img id="imglogo" src="Img/telegram.png" alt="telegram"></a>
+        <a href="https://www.tiktok.com/es/" target="_blank"><img id="imglogo" src="Img/tiktok.png" alt="tiktok"></a>
+        <a href="https://www.youtube.com/" target="_blank"><img id="imglogo" src="Img/youtube.png" alt="youtube"></a>
+        <a href="https://www.freepik.es/" target="_blank"><p id="freekip">Images by rowpixel.com, juley_fish and wirestock on Freepik</p></a>
         <p>Anxo Búa Alonso</p>
     </footer>
 </body>
